# MumbaiHacks2025

./: README.md  agents.yaml  crew.py  email_service.py  main.py  requirements.txt  tasks.yaml
neon/: README.md  pyproject.toml
neon/knowledge/: financial_data.xlsx
neon/src/neon/: crew.py  financial_health_report.md  main.py  report.xlsx
neon/src/neon/config/: tasks.yaml
neon/src/neon/tools/: files_tool.py
