
[project]
name = "sme_monitor"
version = "0.1.0"
description = "SME Financial Data Monitoring CrewAI project"
authors = [{ name = "Your Name" }]

[tool.crewai]
crew_name = "neon"
entry_point = "src.neon.main:run"
[project]

name = "neon"
version = "0.1.0"
description = "neon using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
neon = "neon.main:run"
run_crew = "neon.main:run"
train = "neon.main:train"
replay = "neon.main:replay"
test = "neon.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
